--- a/style.css
+++ b/style.css
@@ -27,11 +27,22 @@ body{
     border: 1px solid #7f8487;
 }
 
-.controls{
+.controls, .controls li, .icons, .icons i{
     display: flex;
     align-items: center;
     justify-content: space-between;
     
+}
+
+.controls .icons i {
+    width: 40px;
+    font-size: 16px;
+    cursor: pointer;
+    justify-content: center;
+}
+
+.controls .icons{
+    width: 35%;
 }
 
 ul{
